feat: 기타 예외처리 추가